--- a/RedGreenBlueHW/Base.lproj/Main.storyboard
+++ b/RedGreenBlueHW/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KWe-eZ-6d7">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -169,7 +169,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uvd-Vt-IM3">
-                                <rect key="frame" x="185.66666666666666" y="242" width="43" height="35"/>
+                                <rect key="frame" x="185.5" y="242" width="43" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="uvd-Vt-IM3" secondAttribute="height" multiplier="37:30" id="7f5-5S-WLQ"/>
                                 </constraints>
